tests/ui/borrowck/cloning-in-async-block-121547.stderr
error[E0382]: use of moved value: `value`
  --> $DIR/cloning-in-async-block-121547.rs:5:9
   |
LL | async fn clone_async_block(value: String) {
   |                            ----- move occurs because `value` has type `String`, which does not implement the `Copy` trait
LL |     for _ in 0..10 {
   |     -------------- inside of this loop
LL |         async {
   |         ^^^^^ value moved here, in previous iteration of loop
LL |             drop(value);
   |                  ----- use occurs due to use in coroutine
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |             drop(value.clone());
   |                       ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
